[package]
name = "privacy-vault"
version = "0.1.0"
description = "Trustless Privacy Vault for WHISTLE token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "~1.18.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
borsh = "0.10.3"
borsh-derive = "0.10.3"

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
spl-associated-token-account = "2.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

